--- a/detail.html
+++ b/detail.html
@@ -12,7 +12,7 @@
     <header class="detail-page-header">
         <div class="centerbox">
             <h1 class="logo">
-                <a href="index.html"><img src="images/logo.png" alt="Real Tour"></a>
+                <a href="index.html"><img src="images/lo.png" alt="Real Tour"></a>
             </h1>
             <a href="index.html" class="detail-back">
                 <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor"><path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"/></svg>
