feat: 상세페이지 디자인 수정 및 이미지 교체

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header class="header" id="header">
             <div class="centerbox">
                 <h1 class="logo">
-                    <a href="index.html"><img src="/images/lo.png" alt="Real Tour"></a>
+                    <a href="index.html"><img src="images/lo.png" alt="Real Tour"></a>
                 </h1>
                 <div class="nav">
                     <input type="text" placeholder="'연말 뉴욕 인기투어 티켓 최대 10%할인'" />
